Updated with some math foundations

--- a/pycon7.ipynb
+++ b/pycon7.ipynb
@@ -25,7 +25,7 @@
     }
    },
    "source": [
-    "##Who am I\n",
+    "## Who am I\n",
     "\n",
     "- MSc Student in Telecommunication Engineering @ Poliba\n",
     "- Despite a Java background, I prefer Python whenever possible\n",
@@ -41,7 +41,7 @@
     }
    },
    "source": [
-    "##Agenda\n",
+    "## Agenda\n",
     "\n",
     "- Why functional programming\n",
     "    - Everything's object\n",
@@ -64,7 +64,7 @@
    "source": [
     "## Disclaimer\n",
     "\n",
-    "<p style=\"text-align: center; font-size: 40px\"><strong>I'm not a seller</strong></p>\n"
+    "<p style=\"text-align: center; font-size: 40px\"><strong>I'm not an hoover seller</strong></p>\n"
    ]
   },
   {
@@ -75,7 +75,7 @@
     }
    },
    "source": [
-    "#Why functional programming\n",
+    "# Why functional programming\n",
     "\n",
     "- Think in terms of functions\n",
     "- State as function evaluation, not variables assignment\n",
@@ -91,7 +91,11 @@
     }
    },
    "source": [
-    "##What is a function?"
+    "## What is a function?\n",
+    "\n",
+    "A **relation** from a set of inputs (X) to a set of possible outputs (Y) where each input is related to exactly one output.\n",
+    "\n",
+    "f: X -> Y"
    ]
   },
   {
@@ -124,7 +128,7 @@
     }
    },
    "source": [
-    "#Functional features in Python\n",
+    "# Functional features in Python\n",
     "\n",
     "- Not all functional patterns apply to Python\n",
     "- Hybrid approach is often requested\n",
@@ -140,7 +144,7 @@
     }
    },
    "source": [
-    "##First class functions\n",
+    "## First class functions\n",
     "\n",
     "- Since everything's object\n",
     "- Functions are objects (with fields and methods)\n"
@@ -192,7 +196,7 @@
     }
    },
    "source": [
-    "##High order functions\n",
+    "## High order functions\n",
     "\n",
     "- Functions accepting functions as params\n",
     "- Functions returning other functions"
@@ -202,7 +206,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Function composition in math\n"
+    "## Function composition in math\n",
+    "\n",
+    "A pointwise application of one function to the result of another to produce a third function. \n",
+    "\n",
+    "- f : X → Y \n",
+    "- g : Y → Z \n",
+    "- g ∘ f : X -> Z\n"
    ]
   },
   {
@@ -220,7 +230,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Lambda calculus"
+    "## Lambda calculus\n",
+    "\n",
+    "Il lambda calcolo o λ-calcolo è un sistema formale definito dal matematico Alonzo Church, sviluppato per analizzare formalmente le funzioni e il loro calcolo. Le prime sono espresse per mezzo di un linguaggio formale, che stabilisce quali siano le regole per formare un termine, il secondo con un sistema di riscrittura, che definisce come i termini possano essere ridotti e semplificati.\n",
+    "\n",
+    "è un sistema di riscrittura\n",
+    "\n",
+    "http://infoteorica.weebly.com/uploads/1/7/8/9/17895653/lambda_rid.pdf"
    ]
   },
   {
@@ -268,7 +284,7 @@
     }
    },
    "source": [
-    "##Class for function composition\n",
+    "## Class for function composition\n",
     "Handle class creation via a new class syntax, allowing a \"static\" configuration\n"
    ]
   },
@@ -318,7 +334,7 @@
     }
    },
    "source": [
-    "#Immutable vs mutable data structure\n",
+    "# Immutable vs mutable data structure\n",
     "\n",
     "- Variables don't **vary** any more\n",
     "- Will your program still working?"
@@ -451,7 +467,7 @@
     }
    },
    "source": [
-    "##Strict vs not strict evaluation\n",
+    "## Strict vs not strict evaluation\n",
     "\n",
     "- Strict evaluation requires that all operators needs to be evaluated\n",
     "- Non strict (or lazy) evaluation, evaluates expression if and when requested"
@@ -461,7 +477,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#Truth table"
+    "# Truth table"
    ]
   },
   {
@@ -520,7 +536,7 @@
     }
    },
    "source": [
-    "##Use case: Python iterables structures\n",
+    "## Use case: Python iterables structures\n",
     "\n",
     "- **Iterable**: objects than can be iterated;\n",
     "- **Iterator**: objects than can be iterated and consumed only once, with two main problems:\n",
@@ -566,7 +582,7 @@
     }
    },
    "source": [
-    "##Recursion vs loop\n",
+    "## Recursion vs loop\n",
     "- Functional programming requires a recursion approach vs loop iteration\n",
     "- Python suffers by recursion limit\n",
     "- Python does not offer any tail call optimization"
@@ -603,7 +619,7 @@
     }
    },
    "source": [
-    "##Currying\n",
+    "## Currying\n",
     "\n",
     "Multiple arguments functions mapped to single arguments functions"
    ]
@@ -649,7 +665,7 @@
     }
    },
    "source": [
-    "##Partials\n",
+    "## Partials\n",
     "Python provides \"partial\" functions for manual currying"
    ]
   },
@@ -710,7 +726,7 @@
     }
    },
    "source": [
-    "##Decorator Pattern\n",
+    "## Decorator Pattern\n",
     "\n",
     "Return a modified version of a decorated function"
    ]
@@ -770,7 +786,7 @@
     }
    },
    "source": [
-    "#Monads\n",
+    "# Monads\n",
     "\n",
     "- How to handle error in functional programming?\n",
     "- Practical example: parsing and tranforming data coming from http request\n",
@@ -862,7 +878,7 @@
     }
    },
    "source": [
-    " #Useful libraries\n",
+    "# Useful libraries\n",
     "\n",
     "- **Fn.py** (https://github.com/kachayev/fn.py) (Scala functional features ported to Python)\n",
     "- **Underscore.py** (ported from underscore_js)"
@@ -876,7 +892,7 @@
     }
    },
    "source": [
-    "#Summary\n",
+    "# Summary\n",
     "- Functional programming for writing more succint code\n",
     "- Change viewpoint: think in terms of function\n",
     "- Python seems for dummies until you show some cool features\n",
@@ -900,8 +916,17 @@
     }
    },
    "source": [
-    "#Questions?"
+    "# Questions?"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -921,7 +946,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.4.2"
+   "version": "3.5.1"
   }
  },
  "nbformat": 4,
