Added some math + images

--- a/pycon7.ipynb
+++ b/pycon7.ipynb
@@ -77,8 +77,8 @@
    "source": [
     "# Why functional programming\n",
     "\n",
-    "- Think in terms of functions\n",
-    "- State as function evaluation, not variables assignment\n",
+    "- Think in terms of **functions**\n",
+    "- Enfatizes using *function evaluation* instead of *state evolution*\n",
     "- Testing is (more) easy\n",
     "- A new viewpoint is required"
    ]
@@ -93,9 +93,10 @@
    "source": [
     "## What is a function?\n",
     "\n",
-    "A **relation** from a set of inputs (X) to a set of possible outputs (Y) where each input is related to exactly one output.\n",
+    "A **relation** from a set of inputs (X) to a set of possible outputs (Y) where **each** input is related to **exactly** one output.\n",
     "\n",
-    "f: X -> Y"
+    "<p style=\"text-align:center; font-size:20px;\">f: X → Y</p>\n",
+    "<img src=\"images/function.svg\" />"
    ]
   },
   {
@@ -144,15 +145,15 @@
     }
    },
    "source": [
-    "## First class functions\n",
+    "## First class (or high order) functions and \n",
     "\n",
     "- Since everything's object\n",
-    "- Functions are objects (with fields and methods)\n"
+    "- Functions are objects too (with fields and methods)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false,
     "slideshow": {
@@ -199,7 +200,8 @@
     "## High order functions\n",
     "\n",
     "- Functions accepting functions as params\n",
-    "- Functions returning other functions"
+    "- Functions returning other functions\n",
+    "- **filter**, **map**, **reduce** (now in *itertools* module)"
    ]
   },
   {
@@ -210,9 +212,54 @@
     "\n",
     "A pointwise application of one function to the result of another to produce a third function. \n",
     "\n",
+    "Given:\n",
     "- f : X → Y \n",
     "- g : Y → Z \n",
-    "- g ∘ f : X -> Z\n"
+    "          \n",
+    "<p style=\"text-align:center; font-size:20px\">$g\\circ f$ : X → Z</p>\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "\n",
+    "def mapper_func(lst, reduce_func):\n",
+    "    \"\"\"\n",
+    "    Apply a function to each member of <lst>\n",
+    "    \"\"\"\n",
+    "    return map(reduce_func, lst)\n",
+    "\n",
+    "for _ in range(0, 100):\n",
+    "    assert list(mapper_func([1,2,3], str))  == [\"1\", \"2\", \"3\"]\n",
+    "    assert list(mapper_func([\"1\",\"2\",\"3\"], int))  == [1, 2, 3]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "def check_if_neg(value):\n",
+    "        \"\"\"\n",
+    "        Check if values is neg\n",
+    "        \"\"\"\n",
+    "        return value > 0\n",
+    "    \n",
+    "def filter_negative_numbers(lst):\n",
+    "    \"\"\"\n",
+    "    Filter negative numbers from <lst>\n",
+    "    \"\"\"\n",
+    "    return filter(check_if_neg, lst)\n",
+    "\n",
+    "assert list(filter_negative_numbers([-3, 4, 5, -10, 20])) == [4, 5, 20]"
    ]
   },
   {
@@ -221,8 +268,9 @@
    "source": [
     "## Pure functions\n",
     "\n",
-    "- Function cannot include any assignement statement\n",
+    "- Functions cannot include any assignement statement\n",
     "- **lambda functions** are pure functions\n",
+    "- No side effects\n",
     "- What about default param values? "
    ]
   },
@@ -230,18 +278,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Lambda calculus\n",
+    "## λ calculus\n",
     "\n",
-    "Il lambda calcolo o λ-calcolo è un sistema formale definito dal matematico Alonzo Church, sviluppato per analizzare formalmente le funzioni e il loro calcolo. Le prime sono espresse per mezzo di un linguaggio formale, che stabilisce quali siano le regole per formare un termine, il secondo con un sistema di riscrittura, che definisce come i termini possano essere ridotti e semplificati.\n",
+    "- A formal system to fomally analyze functions and their calculus.\n",
+    "- It deals with rewriting functions with simplified terms\n",
+    "- A formal definition of λ function:\n",
     "\n",
-    "è un sistema di riscrittura\n",
+    "<center style=\"font-size:20px\">Λ ::= X |(ΛΛ)|λX.Λ</center>\n",
     "\n",
     "http://infoteorica.weebly.com/uploads/1/7/8/9/17895653/lambda_rid.pdf"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false,
     "slideshow": {
@@ -252,10 +302,10 @@
     {
      "data": {
       "text/plain": [
-       "<map at 0x10eb8cb00>"
+       "<map at 0x105ece518>"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -272,8 +322,21 @@
     "    \n",
     "    return map(lambda item: round(item, 2), sorted_result)\n",
     "    \n",
-    "\n",
+    "cast_to_float = lambda number: float(number)\n",
     "filter_out()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Practical considerations of λ functions\n",
+    "\n",
+    "- Inline functions\n",
+    "- Concise\n",
+    "- No need of defining a *one time* functions\n",
+    "- Overusing them is not a solution\n",
+    "- assigning λ function to a variable is discouraged (PEP8)"
    ]
   },
   {
@@ -427,6 +490,13 @@
     "- *foo_obj* didn't change\n",
     "- **foo_obj.value** changed!\n",
     "- So, foo_obj changed or not? If so, can you always determine who changed it?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Closures"
    ]
   },
   {
@@ -726,6 +796,18 @@
     }
    },
    "source": [
+    "## Mixing OOP with FP\n",
+    "\n",
+    "- Static methods\n",
+    "- Classes as container\n",
+    "- Decorator pattern\n",
+    "- A revisited strategy pattern"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Decorator Pattern\n",
     "\n",
     "Return a modified version of a decorated function"
@@ -785,6 +867,17 @@
      "slide_type": "subslide"
     }
    },
+   "source": [
+    "## FP patterns\n",
+    "\n",
+    "- Option pattern\n",
+    "- Memoization\n",
+    "- Actor model"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "# Monads\n",
     "\n",
@@ -946,7 +1039,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.1"
+   "version": "3.4.2"
   }
  },
  "nbformat": 4,
