--- a/pycon7.ipynb
+++ b/pycon7.ipynb
@@ -91,7 +91,7 @@
     }
    },
    "source": [
-    "## What is a function?\n",
+    "## (MATH) What is a function?\n",
     "\n",
     "A **relation** from a set of inputs (X) to a set of possible outputs (Y) where **each** input is related to **exactly** one output.\n",
     "\n",
@@ -208,7 +208,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Function composition in math\n",
+    "## (MATH) Function composition in math\n",
     "\n",
     "A pointwise application of one function to the result of another to produce a third function. \n",
     "\n",
@@ -278,7 +278,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## λ calculus\n",
+    "## (MATH) λ calculus\n",
     "\n",
     "- A formal system to fomally analyze functions and their calculus.\n",
     "- It deals with rewriting functions with simplified terms\n",
@@ -291,9 +291,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false,
+    "scrolled": true,
     "slideshow": {
      "slide_type": "subslide"
     }
@@ -302,10 +303,10 @@
     {
      "data": {
       "text/plain": [
-       "<map at 0x105ece518>"
+       "<map at 0x7fda884154a8>"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -322,7 +323,7 @@
     "    \n",
     "    return map(lambda item: round(item, 2), sorted_result)\n",
     "    \n",
-    "cast_to_float = lambda number: float(number)\n",
+    "cast_to_float = lambda number: float(number) # discouraged by PEP8\n",
     "filter_out()"
    ]
   },
@@ -448,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -457,11 +458,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4541957512\n",
-      "10\n",
-      "4541957512\n",
-      "4541957512\n",
-      "3\n"
+      "Object ID: 140576565540736\n",
+      "Object 'value' field before applying function: 10\n",
+      "Object 'value' field after applying function: 3\n",
+      "Object ID: 140576565540736\n"
      ]
     }
    ],
@@ -475,10 +475,11 @@
     "def func(obj):\n",
     "    obj.value = 3\n",
     "\n",
-    "#print(id(foo_obj))\n",
-    "print(foo_obj.value)\n",
+    "print(\"Object ID: %i\" %id(foo_obj))\n",
+    "print(\"Object 'value' field before applying function: %i\" %foo_obj.value)\n",
     "func(foo_obj)\n",
-    "print(foo_obj.value)"
+    "print(\"Object 'value' field after applying function: %i\" %foo_obj.value)\n",
+    "print(\"Object ID: %i\" %id(foo_obj))"
    ]
   },
   {
@@ -547,7 +548,36 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Truth table"
+    "## (MATH) Truth table\n",
+    "\n",
+    "\n",
+    "<table>\n",
+    "<tr>\n",
+    "<td style=\"width:50px; text-align:center\"><strong>p</strong></td>\n",
+    "<td style=\"width:50px; text-align:center\"><strong>q</strong></td>\n",
+    "<td style=\"width:50px; text-align:center\"><strong>p & q</strong></td>\n",
+    "</tr>\n",
+    "<tr>\n",
+    "<td style=\"text-align:center\">T</td>\n",
+    "<td style=\"text-align:center\">T</td>\n",
+    "<td style=\"text-align:center\">T</td>\n",
+    "</tr>\n",
+    "<tr>\n",
+    "<td style=\"text-align:center\">T</td>\n",
+    "<td style=\"text-align:center\">F</td>\n",
+    "<td style=\"text-align:center\">F</td>\n",
+    "</tr>\n",
+    "<tr>\n",
+    "<td style=\"text-align:center\">F</td>\n",
+    "<td style=\"text-align:center\">T</td>\n",
+    "<td style=\"text-align:center\">F</td>\n",
+    "</tr>\n",
+    "<tr>\n",
+    "<td style=\"text-align:center\">F</td>\n",
+    "<td style=\"text-align:center\">F</td>\n",
+    "<td style=\"text-align:center\">F</td>\n",
+    "</tr>\n",
+    "</table>\n"
    ]
   },
   {
@@ -660,14 +690,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 34,
    "metadata": {
     "collapsed": false,
     "slideshow": {
      "slide_type": "subslide"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 0 ns, sys: 0 ns, total: 0 ns\n",
+      "Wall time: 33.9 µs\n",
+      "CPU times: user 0 ns, sys: 0 ns, total: 0 ns\n",
+      "Wall time: 97.8 µs\n",
+      "CPU times: user 0 ns, sys: 0 ns, total: 0 ns\n",
+      "Wall time: 66.5 µs\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "93326215443944152681699238856266700490715968264381621468592963895217599993229915608941463976156518286253697920827223758251185210916864000000000000000000000000"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def facti(n):\n",
     "    if n == 0: return 1\n",
@@ -676,9 +729,18 @@
     "        f *= i\n",
     "    return f\n",
     "\n",
-    "def fact(n):\n",
+    "def fact_nt(n):\n",
     "    if n == 0: return 1\n",
-    "    else: return n*fact(n-1)"
+    "    else: return n*fact(n-1)\n",
+    "\n",
+    "def fact(n, acc=1):\n",
+    "    if n == 0:\n",
+    "        return acc\n",
+    "    return fact(n-1, acc*n)\n",
+    "\n",
+    "%time facti(100)\n",
+    "%time fact_nt(100)\n",
+    "%time fact(100)"
    ]
   },
   {
@@ -1039,7 +1101,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.4.2"
+   "version": "3.5.1"
   }
  },
  "nbformat": 4,
